// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Header component Theme color switcher skips rendering in case no theme value was provided from plugin 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="nav"
  >
    <div
      class="nav__container"
    >
      <div
        class="nav__startwrapper"
      >
        <a
          href="/"
        >
          <div
            class="logo"
          >
            <svg
              class="nav__logo light-mode-only"
            />
            <svg
              class="nav__logo dark-mode-only"
            />
          </div>
        </a>
      </div>
      <ul
        class="nav__tabs__container"
      >
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/learn"
          >
            Learn
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="https://nodejs.org/en/docs/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Documentation
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/download"
          >
            Download
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/community"
          >
            Community
          </a>
        </li>
      </ul>
      <div
        class="nav__endwrapper"
      >
        <ul
          class="right-container"
        >
          <li
            class="nav__tabs"
          >
            <div
              class="searchBarContainer"
              style="min-height: 3em; width: 100%; max-width: 8em; box-shadow: none;"
            >
              <div
                class="searchInputContainer"
              >
                <i
                  class="searchIcon material-icons"
                >
                  search
                </i>
                <input
                  autocomplete="off"
                  class="inputText"
                  name="query"
                  placeholder="search..."
                  value=""
                />
              </div>
            </div>
          </li>
          <li
            class="nav__tabs nav__tabs--right"
          />
          <li
            class="nav__tabs"
          >
            <a
              href="https://github.com/nodejs/nodejs.dev"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="sr-only"
              >
                GitHub
              </span>
              <svg
                fill="var(--color-text-accent)"
                style="margin-bottom: -3px;"
              />
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Tests for Header component renders correctly 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="nav"
  >
    <div
      class="nav__container"
    >
      <div
        class="nav__startwrapper"
      >
        <a
          href="/"
        >
          <div
            class="logo"
          >
            <svg
              class="nav__logo light-mode-only"
            />
            <svg
              class="nav__logo dark-mode-only"
            />
          </div>
        </a>
      </div>
      <ul
        class="nav__tabs__container"
      >
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/learn"
          >
            Learn
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="https://nodejs.org/en/docs/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Documentation
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/download"
          >
            Download
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/community"
          >
            Community
          </a>
        </li>
      </ul>
      <div
        class="nav__endwrapper"
      >
        <ul
          class="right-container"
        >
          <li
            class="nav__tabs"
          >
            <div
              class="searchBarContainer"
              style="min-height: 3em; width: 100%; max-width: 8em; box-shadow: none;"
            >
              <div
                class="searchInputContainer"
              >
                <i
                  class="searchIcon material-icons"
                >
                  search
                </i>
                <input
                  autocomplete="off"
                  class="inputText"
                  name="query"
                  placeholder="search..."
                  value=""
                />
              </div>
            </div>
          </li>
          <li
            class="nav__tabs nav__tabs--right"
          >
            <button
              class="dark-mode-toggle"
              type="button"
            >
              <span
                class="sr-only"
              >
                Toggle Dark Mode
              </span>
              <i
                class="material-icons light-mode-only theme-buttons"
              >
                nights_stay
              </i>
              <i
                class="material-icons dark-mode-only theme-buttons"
              >
                wb_sunny
              </i>
            </button>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              href="https://github.com/nodejs/nodejs.dev"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="sr-only"
              >
                GitHub
              </span>
              <svg
                fill="var(--color-text-accent)"
                style="margin-bottom: -3px;"
              />
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Tests for Header component renders shorter menu items for mobile 1`] = `
<div>
  <nav
    aria-label="Primary"
    class="nav"
  >
    <div
      class="nav__container"
    >
      <div
        class="nav__startwrapper"
      >
        <a
          href="/"
        >
          <div
            class="logo"
          >
            <svg
              class="nav__logo light-mode-only"
            />
            <svg
              class="nav__logo dark-mode-only"
            />
          </div>
        </a>
      </div>
      <ul
        class="nav__tabs__container"
      >
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/learn"
          >
            Learn
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="https://nodejs.org/en/docs/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Docs
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/download"
          >
            Download
          </a>
        </li>
        <li
          class="nav__tabs"
        >
          <a
            class="activeStyleTab"
            href="/community"
          >
            Community
          </a>
        </li>
      </ul>
      <div
        class="nav__endwrapper"
      >
        <ul
          class="right-container"
        >
          <li
            class="nav__tabs"
          >
            <div
              class="searchBarContainer"
              style="min-height: 3em; width: 100%; max-width: 8em; box-shadow: none;"
            >
              <div
                class="searchInputContainer"
              >
                <i
                  class="searchIcon material-icons"
                >
                  search
                </i>
                <input
                  autocomplete="off"
                  class="inputText"
                  name="query"
                  placeholder="search..."
                  value=""
                />
              </div>
            </div>
          </li>
          <li
            class="nav__tabs nav__tabs--right"
          >
            <button
              class="dark-mode-toggle"
              type="button"
            >
              <span
                class="sr-only"
              >
                Toggle Dark Mode
              </span>
              <i
                class="material-icons light-mode-only theme-buttons"
              >
                nights_stay
              </i>
              <i
                class="material-icons dark-mode-only theme-buttons"
              >
                wb_sunny
              </i>
            </button>
          </li>
          <li
            class="nav__tabs"
          >
            <a
              href="https://github.com/nodejs/nodejs.dev"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="sr-only"
              >
                GitHub
              </span>
              <svg
                fill="var(--color-text-accent)"
                style="margin-bottom: -3px;"
              />
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
